...
  label,
  value,
  onChangeText,
  onBlur,
  error,
  touched = false,
  placeholder = 'Phone number',
  style,
  defaultCountryCode = '+256',
  testID,
}) => {
  const { colors } = useTheme();
  const [showPicker, setShowPicker] = useState(false);
...
