...
    
    switch (opportunity.type) {
      case "video":
        router.push("/(tabs)/videos-new");
        break;
      case "question":
        const questionId = opportunity.id.replace("question-", "");
        router.push(`/question-answer/${questionId}` as Href);
        break;
      case "survey":
        router.push("/(tabs)/surveys-new");
        break;
      case "instant-reward":
...
